# pcompiler

./: CMakeLists.txt
src/: ast.c  ast.h  dynarray.h  hash.c  hash.h  interface.c  main.c  parse.c  parse.h  parse.tab.c  parse.y  scan.c  scan.h  scan.l  scope.c  scope.h  t1  t2  target.c  test
src/inc/: hashmap.h  ui.h
